--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
     <link rel="stylesheet" href="./src/styles/style.css">
-    <script src="src/script/index.js"></script>
+    <script src="src/script/index.js" type="module"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
@@ -34,7 +34,10 @@
                 <div>
                     <label for="task">Tarefa: </label>
                     <input type="text" name="task" id="inputTask" placeholder="Ex: Reunião no sábado na empresa...">
-                    <button type="submit">Criar</button>
+                    <button type="submit" id="sendTask">Criar</button>
+                </div>
+                <div id="errorContainer">
+
                 </div>
             </section>
             <table class="tasks-table">
