--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
     <link rel="stylesheet" href="./src/styles/style.css">
+    <link rel="stylesheet" href="./src/styles/responsive.css">
     <script src="src/script/index.js" type="module"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -47,24 +48,6 @@
                     <th>Ações</th>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Título da Task</td>
-                        <td>
-                            <select>
-                                <option value="Pendente">Pendente</option>
-                                <option value="Em andamento">Em andamento</option>
-                                <option value="Concluída">Concluída</option>
-                            </select>
-                        </td>
-                        <td>
-                            <button class="action-buttons">
-                                <span class="material-symbols-outlined"> edit </span>
-                            </button>
-                            <button class="action-buttons">
-                                <span class="material-symbols-outlined"> delete </span>
-                            </button>
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </section>
